<resources>
    <string name="app_name">Quote Book</string>

    <string name="unsplash_base_url">"https://api.unsplash.com/"</string>
    <string name="unsplash_access_key">"25c5c6e8002e77d1194c17cbbe22ee68578133bbc4b9ada6a9e7f346d05ed654"</string>
    <!--&lt;!&ndash;    TYPEFACE NAMES  &ndash;&gt;
    <string name="font_anton">"Anton/Anton-Regular.ttf"</string>
    <string name="font_archivo">"Archivo_Black/ArchivoBlack-Regular.ttf"</string>
    <string name="font_courgette">"Courgette/Courgette-Regular.ttf"</string>
    <string name="font_dancing_script">"Dancing_Script/DancingScript-Bold.ttf"</string>
    <string name="font_faster_one">"Faster_One/FasterOne-Regular.ttf"</string>
    <string name="font_krona_one">"Krona_One/KronaOne-Regular.ttf"</string>
    <string name="font_merriweather">"Merriweather/Merriweather-BoldItalic.ttf"</string>
    <string name="font_nosifer">"Nosifer/Nosifer-Regular.ttf"</string>
    <string name="font_source_sans_pro">"Source_Sans_Pro/SourceSansPro-Regular.ttf"</string>
    <string name="font_source_sans_pro_light">"Source_Sans_Pro/SourceSansPro-Light.ttf"</string>

-->
    <!--    TEXT SIZES AND TITLES   -->

    <string name="msg_author">"%s"</string>
    <string name="msg_photographer">"Photo taken by @%s on Unsplash.com"</string>

    <array name="arr_text_sizes">
        <item>16</item>
        <item>20</item>
        <item>22</item>
        <item>26</item>
        <item>30</item>
        <item>34</item>
    </array>

    <array name="arr_text_size_titles">
        <item>Auto</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X Large</item>
        <item>XX Large</item>
    </array>


    <!--    THEME CODES AND TITLES   -->
    <array name="arr_themes_codes">
        <item>"#eeeeee"</item>
        <item>"#444444"</item>
        <item>"#FFAB00"</item>
        <item>"#1B5E20"</item>
        <item>"#0D47A1"</item>
        <item>"#7B1FA2"</item>
        <item>"#E53935"</item>
    </array>

    <array name="arr_text_colors_codes">
        <item>"#111111"</item>
        <item>"#ffffff"</item>
        <item>"#FF6F00"</item>
        <item>"#4CAF50"</item>
        <item>"#2196F3"</item>
        <item>"#6A1B9A"</item>
        <item>"#D32F2F"</item>
    </array>

    <array name="arr_themes_titles">
        <item>Default</item>
        <item>Anti</item>
        <item>Amber</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Red</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="designed_by">sky developers</string>

    <!-- String related to RecyclerView -->
    <string name="tv_recycler_item_1">Quote title is here</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="bio_of_author">Bio</string>
    <string name="about_version">Version: </string>
    <string name="action_settings">Settings</string>
    <string name="about_card1_message">About us</string>
    <string name="help_message">Help</string>
    <string name="help_sub_heading_message">open app tour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">note</string>
    <string name="tag">#tag</string>
    <string name="author">author</string>
    <string name="share_with">share with</string>
    <string name="author_name">author name</string>
    <string name="logoTransitionName">Tansitional image view</string>

    <string name="rate_app_title">Rate our App</string>
    <string name="rate_app_message">If you like our app, please take a moment to rate it in play store!</string>
    <string name="dialog_app_rate">Rate App</string>
    <string name="dialog_ask_later">Later</string>
    <string name="dialog_your_feedback">Your Feedback</string>
    <string name="app_message"> %d</string>

    <!--  Notifications settings. Listed under -->

    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you with the recommended Quotes on your chosen time.</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">9 : 00 PM</string>

</resources>
