<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view_item_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin_vertical_big_activity"
    android:layout_marginEnd="@dimen/card_margin_horizontal_big_activity"
    android:layout_marginStart="@dimen/card_margin_horizontal_big_activity"
    android:layout_marginTop="@dimen/card_margin_vertical_big_activity"
    android:background="@color/white"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
    card_view:cardElevation="@dimen/card_recycler_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_margin">

        <TextView
            android:id="@+id/tv_recycler_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_recycler_item_1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_recycler_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recycler_item_1"
            android:layout_marginTop="@dimen/text_margin_very_small"
            android:text="@string/tv_recycler_item_2" />

        <TextView
            android:id="@+id/tv_recycler_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recycler_item_2"
            android:layout_marginTop="@dimen/text_margin_very_small"
            android:text="@string/tv_recycler_item_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/tv_recycler_item_3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person_red_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/text_margin_very_small"
                android:text="@string/author_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/text_margin_very_small"
                android:text="#Tag1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/text_margin_very_small"
                android:text="#Tag2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/text_margin_very_small"
                android:text="#Tag3" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>
