<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:id="@+id/scroll_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!--
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginLeft="@dimen/card_recycler_corner_radius"
                android:layout_marginRight="@dimen/card_recycler_corner_radius"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:translationZ="6dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">


                <TextView
                    style="@style/settings_header"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="General Settings" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_daily_notification"
                        style="@style/tvSettingsHeader"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignTop="@+id/timerSwitch"
                        android:text="App Notifications" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/timerSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="-2dp"
                        android:checked="false"
                        android:theme="@style/switch_theme" />

                    <TextView
                        android:id="@+id/tv_daily_notification_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_daily_notification"
                        android:layout_marginTop="10dp"
                        android:text="@string/sett_reminder_desc"
                        android:textColor="@color/text_color_item_view"
                        android:textSize="14sp" />

                </RelativeLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleAlpha="0.1"
                    app:mrl_rippleColor="@color/colorBackGreen">

                    <LinearLayout
                        android:id="@+id/layout_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="3dp"
                            app:srcCompat="@drawable/ic_watch_history_red_48dp" />

                        <TextView
                            android:id="@+id/tv_notification_time"
                            style="@style/tvSettingsHeader"
                            android:layout_width="match_parent"
                            android:layout_marginLeft="10dp"
                            android:text="@string/sett_reminder_time_content"
                            android:textColor="@color/gray" />


                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout><!--
            </android.support.v7.widget.CardView>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:layout_marginLeft="@dimen/card_recycler_corner_radius"
                        android:layout_marginRight="@dimen/card_recycler_corner_radius"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:translationZ="6dp"
                        card_view:cardCornerRadius="4dp"
                        card_view:cardElevation="4dp">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <TextView
                        android:id="@+id/tv_agree_header"
                        style="@style/settings_header"
                        android:layout_marginBottom="10dp"

                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Legal" />

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/rippleLayoutUnsplashLicence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleAlpha="0.1"
                        app:mrl_rippleColor="@color/colorBackGreen">

                        <TextView
                            android:id="@+id/tv_unsplash"
                            style="@style/tvSettingsHeader"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:text="Unsplash Images" />
                    </com.balysv.materialripple.MaterialRippleLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/lightGray" />

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/rippleLayoutGoogleFonts"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleAlpha="0.1"
                        app:mrl_rippleColor="@color/colorBackGreen">

                        <TextView
                            android:id="@+id/tv_google_fonts"
                            style="@style/tvSettingsHeader"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:text="Google Fonts" />

                    </com.balysv.materialripple.MaterialRippleLayout>
                </LinearLayout><!--
            </android.support.v7.widget.CardView>
-->
            </LinearLayout>


            <!--         <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"

                         android:layout_marginLeft="@dimen/card_recycler_corner_radius"
                         android:layout_marginRight="@dimen/card_recycler_corner_radius"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:translationZ="6dp"
                         card_view:cardCornerRadius="4dp"
                         card_view:cardElevation="4dp">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/background_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_help_heading"
                        style="@style/settings_header"
                        android:layout_marginBottom="10dp"

                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/help_message" />

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleAlpha="0.1"
                        app:mrl_rippleColor="@color/colorBackGreen">

                        <LinearLayout
                            android:id="@+id/layout_help"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginTop="3dp"
                                app:srcCompat="@drawable/ic_hello_red" />

                            <TextView
                                android:id="@+id/tv_help"
                                style="@style/tvSettingsHeader"
                                android:layout_width="match_parent"
                                android:layout_marginLeft="10dp"
                                android:text="@string/help_sub_heading_message" />
                        </LinearLayout>
                    </com.balysv.materialripple.MaterialRippleLayout>
                </LinearLayout>
            </LinearLayout><!--
            </android.support.v7.widget.CardView>-->

            <!--<android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"

                android:layout_marginLeft="@dimen/card_recycler_corner_radius"
                android:layout_marginRight="@dimen/card_recycler_corner_radius"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:translationZ="6dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/background_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">


                    <TextView
                        style="@style/settings_header"
                        android:layout_marginBottom="10dp"

                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/about_card1_message" />

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleAlpha="0.1"
                        app:mrl_rippleColor="@color/colorBackGreen">

                        <TextView
                            android:id="@+id/tv_version"
                            style="@style/tvSettingsHeader"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:text="Version 1.0.0" />

                    </com.balysv.materialripple.MaterialRippleLayout>
                </LinearLayout>
                <!--
                            </android.support.v7.widget.CardView>-->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>